[tool.poetry]
name = "dotsplit"
version = "0.0.1"
description = "Transform dot-delimited strings to an array of python strings."
authors = ["Deyon Samuel Washington <winnersonly@realpolyglot.com>"]
readme = "readme.md"
packages = [
    "array",
    "dot",
    "namespace",
    "split",
    "string"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
