[tool.poetry]
name = "dotsplit"
version = "0.2.1"
description = "Transform dot-delimited strings to an array of python strings."
authors = ["Deyon Samuel Washington <winnersonly@realpolyglot.com>"]
readme = "readme.md"
keywords = [
    "array",
    "dot",
    "namespace",
    "split",
    "string"
]
repository = "https://github.com/wilmoore/dotsplit.py"
homepage = "https://github.com/wilmoore/dotsplit.py"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
